--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.89"
 async-channel = "2.3.1"
 axum = { version = "0.7.5", features = ["macros", "ws"] }
 futures-util = "0.3.30"
-redis = { version = "0.27.2", features = ["tokio-comp"] }
+redis = { version = "0.27.2", features = ["tokio-comp", "uuid"] }
 rubenvy = "0.1.1"
 secrecy = "0.8.0"
 sentry = { version = "0.34.0", default-features = false, features = [
