updates for presentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
-askama = { git = "https://github.com/djc/askama", features = ["with-axum"] }
-askama-axum = { git = "https://github.com/djc/askama", package = "askama_axum" }
+askama = { git = "https://github.com/djc/askama", features = [
+    "with-axum",
+], commit = "66169add86bfce25cd16a2dc58a4ea825aee2be4" }
+askama-axum = { git = "https://github.com/djc/askama", package = "askama_axum", commit = "66b53eecafd97eb4a8333d1309efbc411d1b2618" }
 axum = { version = "0.7.5", features = ["macros", "ws"] }
 futures-util = "0.3.30"
-redis = { version = "0.27.2", features = ["r2d2", "tokio-comp", "uuid"] }
+redis = { version = "0.27.2", features = ["tokio-comp", "uuid"] }
 rubenvy = "0.1.1"
-secrecy = "0.8.0"
+secrecy = "0.10.2"
 sentry = { version = "0.34.0", default-features = false, features = [
     "anyhow",
     "backtrace",
@@ -27,8 +29,8 @@ sentry = { version = "0.34.0", default-features = false, features = [
 serde = "1.0.210"
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full", "time"] }
-tower = "0.4.3"
-tower-http = { version = "0.5.2", features = [
+tower = "0.5.1"
+tower-http = { version = "0.6.1", features = [
     "fs",
     "request-id",
     "trace",
