--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ askama = { git = "https://github.com/djc/askama", features = [
 ], rev = "66169add86bfce25cd16a2dc58a4ea825aee2be4" }
 askama-axum = { git = "https://github.com/djc/askama", package = "askama_axum", rev = "66169add86bfce25cd16a2dc58a4ea825aee2be4" }
 axum = { version = "0.7.5", features = ["macros", "ws"] }
+deadpool-redis = "0.18.0"
 futures-util = "0.3.30"
 redis = { version = "0.27.2", features = ["tokio-comp", "uuid"] }
 rubenvy = "0.1.1"
