--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,18 +7,8 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'random-crowdsourced'",
-            "cargo": {
-                "args": [
-                    "build",
-                    "--bin=random-crowdsourced",
-                    "--package=random-crowdsourced"
-                ],
-                "filter": {
-                    "name": "random-crowdsourced",
-                    "kind": "bin"
-                }
-            },
+            "name": "Launch",
+            "program": "${workspaceFolder}/target/debug/random-crowdsourced",
             "args": [],
             "cwd": "${workspaceFolder}"
         },
