--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7"] }
 axum-extra = "0.10.0"
+secrecy = "0.10.3"
