--- a/fly.toml
+++ b/fly.toml
@@ -14,10 +14,31 @@ primary_region = 'iad'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'suspend'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
+
+[[http_service.checks]]
+  grace_period = 5000
+  interval = "5m"
+  method = "GET"
+  protocol = "https"
+  timeout = 1000
+  path = "/"
+
+[http_service.checks.headers]
+  Fly-Health-Check = "true"
+
+[[http_service.machine_checks]]
+  image = "curlimages/curl"
+  entrypoint = ["/bin/sh", "-c"]
+  command = ["curl http://[$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
+  kill_signal = "SIGKILL"
+  kill_timeout = "5s"
+
+[deploy]
+  strategy = "canary"
 
 [[vm]]
   size = 'shared-cpu-1x'
