--- a/fly.toml
+++ b/fly.toml
@@ -23,8 +23,6 @@ primary_region = 'iad'
   grace_period = "5s"
   interval = "5m"
   method = "GET"
-  protocol = "https"
-  tls_server_name = "rrgrng.org"
   timeout = "1s"
   path = "/"
 
@@ -34,7 +32,7 @@ primary_region = 'iad'
 [[http_service.machine_checks]]
   image = "curlimages/curl"
   entrypoint = ["/bin/sh", "-c"]
-  command = ["curl https://[$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
+  command = ["curl http://[$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
   kill_signal = "SIGKILL"
   kill_timeout = "5s"
 
