--- a/fly.toml
+++ b/fly.toml
@@ -13,7 +13,7 @@ primary_region = 'iad'
 
 [http_service]
   internal_port = 8080
-  force_https = true
+  force_https = false
   auto_stop_machines = 'suspend'
   auto_start_machines = true
   min_machines_running = 0
@@ -32,7 +32,7 @@ primary_region = 'iad'
 [[http_service.machine_checks]]
   image = "curlimages/curl"
   entrypoint = ["/bin/sh", "-c"]
-  command = ["curl [$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
+  command = ["curl -vvv [$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
   kill_signal = "SIGKILL"
   kill_timeout = "5s"
 
