--- a/fly.toml
+++ b/fly.toml
@@ -29,12 +29,12 @@ primary_region = 'iad'
 [http_service.checks.headers]
   Fly-Health-Check = "true"
 
-[[http_service.machine_checks]]
-  image = "curlimages/curl"
-  entrypoint = ["/bin/sh", "-c"]
-  command = ["curl -vvv https://[$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
-  kill_signal = "SIGKILL"
-  kill_timeout = "5s"
+# [[http_service.machine_checks]]
+#   image = "curlimages/curl"
+#   entrypoint = ["/bin/sh", "-c"]
+#   command = ["curl -vvv https://[$FLY_TEST_MACHINE_IP] | grep 'really really good random number generator'"]
+#   kill_signal = "SIGKILL"
+#   kill_timeout = "5s"
 
 [deploy]
   strategy = "canary"
