--- a/fly.toml
+++ b/fly.toml
@@ -20,8 +20,8 @@ primary_region = 'iad'
   processes = ['app']
 
 [[http_service.checks]]
-  grace_period = "5s"
-  interval = "1m"
+  grace_period = "2s"
+  interval = "10s"
   method = "GET"
   timeout = "1s"
   path = "/api/health"
