--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,5 @@ tower-http = { version = "0.6.1", features = [
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7"] }
-axum-extra = { version = "0.10.0", features = ["typed-header"] }
+axum-extra = "0.10.0"
 secrecy = "0.10.3"
-headers = "0.4.0"
