--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.10.0", features = ["v7"] }
 axum-extra = "0.10.0"
 secrecy = "0.10.3"
+tokio-util = "0.7.13"
